--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "lint-staged": {
-    "*.{ts,js}": ["eslint **/*.{ts,js} --fix --ignore-path .gitignore", "prettier --write **/*.{ts,js} --ignore-path .gitignore"],
+    "*.{ts,js}": [
+      "eslint **/*.{ts,js} --fix --ignore-path .gitignore",
+      "prettier --write **/*.{ts,js} --ignore-path .gitignore"
+    ],
     "*.{css,scss}": "stylelint **/*.{css,scss} --ignore-path .gitignore"
   },
   "husky": {
@@ -37,9 +40,12 @@
     "@nestjs/platform-express": "^7.5.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.3"
+    "rxjs": "^6.6.3",
+    "twig": "^1.15.4"
   },
   "devDependencies": {
+    "@commitlint/cli": "^11.0.0",
+    "@commitlint/config-conventional": "^11.0.0",
     "@nestjs/cli": "^7.5.1",
     "@nestjs/schematics": "^7.1.3",
     "@nestjs/testing": "^7.5.1",
@@ -52,21 +58,19 @@
     "eslint": "^7.12.1",
     "eslint-config-prettier": "7.0.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "husky": "^4.3.0",
     "jest": "^26.6.3",
+    "lint-staged": "^10.4.0",
     "prettier": "^2.1.2",
+    "stylelint": "^13.7.2",
+    "stylelint-config-prettier": "^8.0.2",
+    "stylelint-config-standard": "^20.0.0",
     "supertest": "^6.0.0",
     "ts-jest": "^26.4.3",
     "ts-loader": "^8.0.8",
     "ts-node": "^9.0.0",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.0.5",
-    "stylelint": "^13.7.2",
-    "stylelint-config-prettier": "^8.0.2",
-    "stylelint-config-standard": "^20.0.0",
-    "lint-staged": "^10.4.0",
-    "husky": "^4.3.0",
-    "@commitlint/cli": "^11.0.0",
-    "@commitlint/config-conventional": "^11.0.0"
+    "typescript": "^4.0.5"
   },
   "jest": {
     "moduleFileExtensions": [
