--- a/package.json
+++ b/package.json
@@ -6,39 +6,30 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "husky": "husky",
+    "format": "prettier --write **/*.{ts,js,css,scss} --ignore-path .gitignore",
+    "lint:es": "eslint **/*.{ts,js} --fix --ignore-path .gitignore",
+    "lint:style:css": "stylelint **/*.css --ignore-path .gitignore",
+    "lint:style:scss": "stylelint **/*.scss --syntax=scss --ignore-path .gitignore",
+    "lint:style": "pnpm run lint:style:css && pnpm run lint:style:scss",
+    "refactor": "pnpm run format && pnpm run lint:es && pnpm run lint:style",
     "prebuild": "rimraf dist",
     "build": "nest build",
-    "format": "prettier --write **/*.{ts,js} --ignore-path .gitignore",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint:es": "eslint **/*.{ts,js} --fix --ignore-path .gitignore",
-    "lint:style": "stylelint **/*.{css,scss} --ignore-path .gitignore",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
-  "lint-staged": {
-    "*.{ts,js}": [
-      "eslint **/*.{ts,js} --fix --ignore-path .gitignore",
-      "prettier --write **/*.{ts,js} --ignore-path .gitignore"
-    ],
-    "*.{css,scss}": "stylelint **/*.{css,scss} --ignore-path .gitignore"
-  },
-  "husky": {
-    "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
-      "pre-commit": "lint-staged"
-    }
-  },
   "dependencies": {
-    "@nestjs/common": "^7.5.1",
+    "@nestjs/common": "^7.6.1",
     "@nestjs/config": "^0.6.1",
-    "@nestjs/core": "^7.5.1",
-    "@nestjs/platform-express": "^7.5.1",
+    "@nestjs/core": "^7.6.1",
+    "@nestjs/platform-express": "^7.6.1",
     "@tmessaoudi-official/dot-env-loader": "https://github.com/tmessaoudi-official/dot-env-loader/archive/0.0.9.tar.gz",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -46,33 +37,33 @@
     "twig": "^1.15.4"
   },
   "devDependencies": {
+    "@nestjs/cli": "^7.5.4",
+    "@nestjs/schematics": "^7.2.5",
+    "@nestjs/testing": "^7.6.1",
+    "@types/express": "^4.17.9",
+    "@types/jest": "^26.0.19",
+    "@types/node": "^14.14.13",
+    "@types/supertest": "^2.0.10",
+    "@typescript-eslint/eslint-plugin": "^4.9.1",
+    "@typescript-eslint/parser": "^4.9.1",
+    "eslint": "^7.15.0",
+    "eslint-config-prettier": "7.0.0",
+    "eslint-plugin-prettier": "^3.2.0",
+    "jest": "^26.6.3",
+    "husky": "^5.0.6",
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
-    "@nestjs/cli": "^7.5.1",
-    "@nestjs/schematics": "^7.1.3",
-    "@nestjs/testing": "^7.5.1",
-    "@types/express": "^4.17.8",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^14.14.6",
-    "@types/supertest": "^2.0.10",
-    "@typescript-eslint/eslint-plugin": "^4.6.1",
-    "@typescript-eslint/parser": "^4.6.1",
-    "eslint": "^7.12.1",
-    "eslint-config-prettier": "7.0.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "husky": "^4.3.0",
-    "jest": "^26.6.3",
-    "lint-staged": "^10.4.0",
-    "prettier": "^2.1.2",
-    "stylelint": "^13.7.2",
+    "lint-staged": "^10.5.3",
+    "prettier": "^2.2.1",
+    "stylelint": "^13.8.0",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^20.0.0",
-    "supertest": "^6.0.0",
-    "ts-jest": "^26.4.3",
-    "ts-loader": "^8.0.8",
-    "ts-node": "^9.0.0",
+    "supertest": "^6.0.1",
+    "ts-jest": "^26.4.4",
+    "ts-loader": "^8.0.12",
+    "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.0.5"
+    "typescript": "^4.1.3"
   },
   "jest": {
     "moduleFileExtensions": [
