feature(git): Prepush hook
Added branch name linting before push
See .git-branches.json

--- a/package.json
+++ b/package.json
@@ -6,13 +6,12 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "husky": "husky",
     "format": "prettier --write **/*.{ts,js,css,scss} --ignore-path .gitignore",
     "lint:es": "eslint **/*.{ts,js} --fix --ignore-path .gitignore",
     "lint:style:css": "stylelint **/*.css --ignore-path .gitignore",
     "lint:style:scss": "stylelint **/*.scss --syntax=scss --ignore-path .gitignore",
-    "lint:style": "pnpm run lint:style:css && pnpm run lint:style:scss",
-    "refactor": "pnpm run format && pnpm run lint:es && pnpm run lint:style",
+    "lint:style": "pnpm lint:style:css && pnpm lint:style:scss",
+    "refactor": "pnpm format && pnpm lint:es && pnpm lint:style",
     "prebuild": "rimraf dist",
     "build": "nest build",
     "start": "nest start",
@@ -37,6 +36,8 @@
     "twig": "^1.15.4"
   },
   "devDependencies": {
+    "@commitlint/cli": "^11.0.0",
+    "@commitlint/config-conventional": "^11.0.0",
     "@nestjs/cli": "^7.5.4",
     "@nestjs/schematics": "^7.2.5",
     "@nestjs/testing": "^7.6.1",
@@ -46,13 +47,12 @@
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.9.1",
     "@typescript-eslint/parser": "^4.9.1",
+    "branch-name-lint": "^1.4.0",
     "eslint": "^7.15.0",
     "eslint-config-prettier": "7.0.0",
     "eslint-plugin-prettier": "^3.2.0",
-    "jest": "^26.6.3",
     "husky": "^5.0.6",
-    "@commitlint/cli": "^11.0.0",
-    "@commitlint/config-conventional": "^11.0.0",
+    "jest": "^26.6.3",
     "lint-staged": "^10.5.3",
     "prettier": "^2.2.1",
     "stylelint": "^13.8.0",
